[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenarios/Reality/DinerRoom/WindowControl.gd" type="Script" id=1]

[node name="WindowControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1180.0
margin_bottom = -525.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BG_Left" type="Button" parent="."]
margin_left = 16.0
margin_top = 20.0
margin_right = 36.0
margin_bottom = 40.0
text = "<"

[node name="BG_Right" type="Button" parent="."]
margin_left = 64.0
margin_top = 20.0
margin_right = 84.0
margin_bottom = 40.0
text = ">"

[node name="Main_Left" type="Button" parent="."]
margin_left = 16.0
margin_top = 60.0
margin_right = 36.0
margin_bottom = 80.0
text = "<"

[node name="Main_Right" type="Button" parent="."]
margin_left = 64.0
margin_top = 60.0
margin_right = 84.0
margin_bottom = 80.0
text = ">"

[node name="Button01" type="Button" parent="."]
margin_left = 10.0
margin_top = 95.0
margin_right = 30.0
margin_bottom = 115.0
text = "1"

[node name="Button02" type="Button" parent="."]
margin_left = 40.0
margin_top = 95.0
margin_right = 60.0
margin_bottom = 115.0
text = "2"

[node name="Button03" type="Button" parent="."]
margin_left = 70.0
margin_top = 95.0
margin_right = 90.0
margin_bottom = 115.0
text = "3"

[node name="Button04" type="Button" parent="."]
margin_left = 10.0
margin_top = 125.0
margin_right = 30.0
margin_bottom = 145.0
text = "4"

[node name="Button05" type="Button" parent="."]
margin_left = 40.0
margin_top = 125.0
margin_right = 60.0
margin_bottom = 145.0
text = "5"

[node name="Button06" type="Button" parent="."]
margin_left = 70.0
margin_top = 125.0
margin_right = 90.0
margin_bottom = 145.0
text = "6"

[node name="Button07" type="Button" parent="."]
margin_left = 40.0
margin_top = 155.0
margin_right = 60.0
margin_bottom = 175.0
text = "7"

